--- a/birthday.html
+++ b/birthday.html
@@ -18,26 +18,42 @@
       sizes="100%"
       href="https://cdn-icons-png.flaticon.com/512/929/929417.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
-    <div class="loader"></div>
-    <div
-      class="loader"
-      style="--c: radial-gradient(red, blue); --s: 90px"
-    ></div>
-    <div
-      class="loader"
-      style="
-        --c: repeating-linear-gradient(45deg, #000 0 10%, red 0 20%);
-        --s: 100px;
-      "
-    ></div>
+    <div class="body">
+      <div class="loader"></div>
+      <div
+        class="loader"
+        style="--c: radial-gradient(red, blue); --s: 90px"
+      ></div>
+      <div
+        class="loader"
+        style="
+          --c: repeating-linear-gradient(45deg, #000 0 10%, red 0 20%);
+          --s: 100px;
+        "
+      ></div>
+    </div>
+    <div class="container position-absolute top-50 start-50 translate-middle">
+      <h1 class="text-start text-light fw-bold text">
+        <span class="">Playing</span> this
+        <span class="fst-italic">song</span> to make your
+        <span class="fst-italic text-dark">mood.</span>
+      </h1>
+    </div>
+    hah
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
   ></script>
-  <script src="index.js"></script>
+  <script src="bday.js"></script>
 </html>
