--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
-  <body class="bg-black">
+  <body>
     <div class="container">
       <label class="switch"
         ><input type="checkbox" id="switch" />
