--- a/birthday.html
+++ b/birthday.html
@@ -25,27 +25,17 @@
       rel="stylesheet"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/matter-js@0.17.1/build/matter.min.js"></script>
   </head>
   <body>
-    <div class="body">
-      <div class="loader"></div>
-      <div
-        class="loader"
-        style="--c: radial-gradient(red, blue); --s: 90px"
-      ></div>
-      <div
-        class="loader"
-        style="
-          --c: repeating-linear-gradient(45deg, #000 0 10%, red 0 20%);
-          --s: 100px;
-        "
-      ></div>
-    </div>
+    <figure></figure>
     <div class="container position-absolute top-50 start-50 translate-middle">
-      <h1 class="text-start text-light fw-bold text">
-        <span class="">Playing</span> this
-        <span class="fst-italic">song</span> to make your
-        <span class="fst-italic text-dark">mood.</span>
+      <h1 class="text-start text-light text">
+        <span class="fw-bold">Playing</span> these
+        <span class="fst-italic fw-bold">songs </span>
+        <span class="fw-bold">to</span>
+        <span class="text-light"> make your</span>
+        <span class="fst-italic text-dark fw-bold">mood.</span>
       </h1>
     </div>
     hah
