--- a/birthday.html
+++ b/birthday.html
@@ -35,7 +35,7 @@
         <span class="fst-italic fw-bold">songs </span>
         <span class="fw-bold">to</span>
         <span class="text-light"> make your</span>
-        <span class="fst-italic text-dark fw-bold">mood.</span>
+        <span class="fst-italic fw-bold" style="color: #2c3639">mood.</span>
       </h1>
     </div>
     hah
