--- a/birthday.html
+++ b/birthday.html
@@ -28,9 +28,9 @@
     <script src="https://unpkg.com/matter-js@0.17.1/build/matter.min.js"></script>
   </head>
   <body>
-    <figure></figure>
+    <figure class="m-0"></figure>
     <div class="container position-absolute top-50 start-50 translate-middle">
-      <h1 class="text-start text-light text">
+      <h1 class="text-start text-light text m-0">
         <span class="fw-bold">Playing</span> these
         <span class="fst-italic fw-bold">songs </span>
         <span class="fw-bold">to</span>
@@ -38,7 +38,16 @@
         <span class="fst-italic fw-bold" style="color: #2c3639">mood.</span>
       </h1>
     </div>
-    hah
+    <div class="container bg-dark text-light py-5">
+      <h1 class="text">
+        <span class="fw-bold">Its your birthday</span> mam.
+        <span class="fst-italic fw-bold" style="color: #774360"
+          >How are you</span
+        >
+        <span>feeling right</span>
+        <span class="fst-italic"> now!</span>
+      </h1>
+    </div>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
