--- a/birthday.html
+++ b/birthday.html
@@ -40,12 +40,13 @@
     </div>
     <div class="container bg-dark text-light py-5">
       <h1 class="text">
-        <span class="fw-bold">Its your birthday</span> mam.
+        <span class="fw-bold">Its your </span>
+        <span class="fw-bold" style="color: #816797">birthday</span> mam.
         <span class="fst-italic fw-bold" style="color: #774360"
           >How are you</span
         >
         <span>feeling right</span>
-        <span class="fst-italic"> now!</span>
+        <span class="fst-italic fw-bold"> NOW!</span>
       </h1>
     </div>
   </body>
