--- a/birthday.html
+++ b/birthday.html
@@ -29,7 +29,9 @@
   </head>
   <body>
     <figure class="m-0"></figure>
-    <div class="container position-absolute top-50 start-50 translate-middle">
+    <div
+      class="container position-absolute top-50 start-50 translate-middle first"
+    >
       <h1 class="text-start text-light text m-0">
         <span class="fw-bold">Playing</span> these
         <span class="fst-italic fw-bold">songs </span>
@@ -38,15 +40,18 @@
         <span class="fst-italic fw-bold" style="color: #2c3639">mood.</span>
       </h1>
     </div>
-    <div class="container bg-dark text-light py-5">
+    <div
+      class="container second text-white py-5"
+      style="background-color: #4c3a51"
+    >
       <h1 class="text">
         <span class="fw-bold">Its your </span>
         <span class="fw-bold" style="color: #816797">birthday</span> mam.
-        <span class="fst-italic fw-bold" style="color: #774360"
+        <span class="fst-italic fw-bold" style="color: #b25068"
           >How are you</span
         >
         <span>feeling right</span>
-        <span class="fst-italic fw-bold"> NOW!</span>
+        <span class="fst-italic fw-bold" style="color: #827397"> NOW!</span>
       </h1>
     </div>
   </body>
