--- a/birthday.html
+++ b/birthday.html
@@ -51,7 +51,7 @@
           >How are you</span
         >
         <span>feeling right</span>
-        <span class="fst-italic fw-bold" style="color: #827397"> NOW!</span>
+        <span class="fst-italic fw-bold" style="color: #78938a"> NOW!</span>
       </h1>
     </div>
   </body>
