--- a/birthday.html
+++ b/birthday.html
@@ -54,6 +54,21 @@
         <span class="fst-italic fw-bold" style="color: #78938a"> NOW!</span>
       </h1>
     </div>
+    <div
+      class="container second text-white py-5"
+      style="background-color: #9eb23b"
+    >
+      <h1 class="text">
+        <span>I</span>
+        <span class="fst-italic fw-bold">hope</span>
+        <span>you are</span>
+        <span class="fw-bold" style="color: #fcf9c6">feeling fine.</span>
+        <span class="fst-italic" style="color: #c70a80">I </span>
+        <span class="fw-bold" style="color: #c70a80">think</span>
+        <span class="fst-italic" style="color: #c70a80"> we are</span>
+        <span class="fw-bold" style="color: #e0deca">better together.</span>
+      </h1>
+    </div>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
