--- a/birthday.html
+++ b/birthday.html
@@ -62,11 +62,13 @@
         <span>I</span>
         <span class="fst-italic fw-bold">hope</span>
         <span>you are</span>
-        <span class="fw-bold" style="color: #fcf9c6">feeling fine.</span>
-        <span class="fst-italic" style="color: #c70a80">I </span>
+        <span class="fw-bold song1" style="color: #fcf9c6">feeling fine.</span>
+        <span class="fw-bold fst-italic" style="color: #c70a80">I </span>
         <span class="fw-bold" style="color: #c70a80">think</span>
         <span class="fst-italic" style="color: #c70a80"> we are</span>
-        <span class="fw-bold" style="color: #e0deca">better together.</span>
+        <span class="fw-bold song2" style="color: #e0deca"
+          >better together</span
+        >
       </h1>
     </div>
   </body>
