--- a/birthday.html
+++ b/birthday.html
@@ -30,7 +30,7 @@
   <body>
     <figure class="m-0"></figure>
     <div
-      class="container position-absolute top-50 start-50 translate-middle first"
+      class="container-fluid position-absolute top-50 start-50 translate-middle first"
     >
       <h1 class="text-start text-light text m-0">
         <span class="fw-bold">Playing</span> these
@@ -41,7 +41,7 @@
       </h1>
     </div>
     <div
-      class="container second text-white py-5"
+      class="container-fluid second text-white py-5"
       style="background-color: #4c3a51"
     >
       <h1 class="text">
@@ -55,7 +55,7 @@
       </h1>
     </div>
     <div
-      class="container second text-white py-5"
+      class="container-fluid second text-white py-5"
       style="background-color: #9eb23b"
     >
       <h1 class="text">
@@ -67,7 +67,7 @@
         <span class="fw-bold" style="color: #c70a80">think</span>
         <span class="fst-italic" style="color: #c70a80"> we are</span>
         <span class="fw-bold song2" style="color: #e0deca"
-          >better together</span
+          >better together.</span
         >
       </h1>
     </div>
