--- a/birthday.html
+++ b/birthday.html
@@ -56,19 +56,36 @@
     </div>
     <div
       class="container-fluid second text-white py-5"
-      style="background-color: #9eb23b"
+      style="background-color: #1b2430"
     >
       <h1 class="text">
         <span>I</span>
         <span class="fst-italic fw-bold">hope</span>
         <span>you are</span>
-        <span class="fw-bold song1" style="color: #fcf9c6">feeling fine.</span>
+        <span class="fw-bold song1" style="color: #51557e">feeling fine.</span>
         <span class="fw-bold fst-italic" style="color: #c70a80">I </span>
         <span class="fw-bold" style="color: #c70a80">think</span>
         <span class="fst-italic" style="color: #c70a80"> we are</span>
-        <span class="fw-bold song2" style="color: #e0deca"
+        <span class="fw-bold song2" style="color: #816797"
           >better together.</span
         >
+      </h1>
+    </div>
+    <div
+      class="container-fluid second text-white py-5"
+      style="background-color: #9eb23b"
+    >
+      <h1 class="text">
+        <span>I</span>
+        <span class="fst-italic fw-bold" style="color: #c70a80">love you</span>
+
+        <span class="">
+          <br />
+          meri</span
+        >
+        <span class="fw-bold fst-italic" style="color: #3f4e4f">swetha </span>
+        <span class="fw-bold">hamesh</span>
+        <span class="fst-italic fw-bold" style="color: #1a4d2e">aaaaaa</span>
       </h1>
     </div>
   </body>
