--- a/birthday.html
+++ b/birthday.html
@@ -73,19 +73,19 @@
     </div>
     <div
       class="container-fluid second text-white py-5"
-      style="background-color: #9eb23b"
+      style="background-color: #f67280"
     >
       <h1 class="text">
         <span>I</span>
         <span class="fst-italic fw-bold" style="color: #c70a80">love you</span>
-
-        <span class="">
+        <span class="fw-bold"> <3</span>
+        <span class="" style="color: #ffc8c8">
           <br />
           meri</span
         >
-        <span class="fw-bold fst-italic" style="color: #3f4e4f">swetha </span>
+        <span class="fw-bold fst-italic" style="color: #355c7d">swetha </span>
         <span class="fw-bold">hamesh</span>
-        <span class="fst-italic fw-bold" style="color: #1a4d2e">aaaaaa</span>
+        <span class="fst-italic fw-bold" style="color: #ffdcdc">aaaaaa</span>
       </h1>
     </div>
   </body>
