--- a/birthday.html
+++ b/birthday.html
@@ -42,16 +42,16 @@
     </div>
     <div
       class="container-fluid second text-white py-5"
-      style="background-color: #4c3a51"
+      style="background-color: #f1d4d4"
     >
       <h1 class="text">
         <span class="fw-bold">Its your </span>
-        <span class="fw-bold" style="color: #816797">birthday</span> mam.
-        <span class="fst-italic fw-bold" style="color: #b25068"
+        <span class="fw-bold" style="color: #e6739f">birthday</span> mam.
+        <span class="fst-italic fw-bold" style="color: #cc0e74"
           >How are you</span
         >
-        <span>feeling right</span>
-        <span class="fst-italic fw-bold" style="color: #78938a"> NOW!</span>
+        <span class="text-dark">feeling right</span>
+        <span class="fst-italic fw-bold" style="color: #e94560"> NOW!</span>
       </h1>
     </div>
     <div
@@ -73,19 +73,19 @@
     </div>
     <div
       class="container-fluid second text-white py-5"
-      style="background-color: #f67280"
+      style="background-color: #142850"
     >
       <h1 class="text">
         <span>I</span>
         <span class="fst-italic fw-bold" style="color: #c70a80">love you</span>
         <span class="fw-bold"> <3</span>
-        <span class="" style="color: #ffc8c8">
+        <span class="" style="color: #27496d">
           <br />
           meri</span
         >
-        <span class="fw-bold fst-italic" style="color: #355c7d">swetha </span>
+        <span class="fw-bold fst-italic" style="color: #00a8cc">swetha </span>
         <span class="fw-bold">hamesh</span>
-        <span class="fst-italic fw-bold" style="color: #ffdcdc">aaaaaa</span>
+        <span class="fst-italic fw-bold" style="color: #0c7b93">aaaaaa</span>
       </h1>
     </div>
   </body>
