--- a/birthday.html
+++ b/birthday.html
@@ -73,19 +73,19 @@
     </div>
     <div
       class="container-fluid second text-white py-5"
-      style="background-color: #142850"
+      style="background-color: #f5abc9"
     >
       <h1 class="text">
         <span>I</span>
         <span class="fst-italic fw-bold" style="color: #c70a80">love you</span>
         <span class="fw-bold"> <3</span>
-        <span class="" style="color: #27496d">
+        <span class="" style="color: #7f4a88">
           <br />
           meri</span
         >
-        <span class="fw-bold fst-italic" style="color: #00a8cc">swetha </span>
+        <span class="fw-bold fst-italic" style="color: #3e206d">swetha </span>
         <span class="fw-bold">hamesh</span>
-        <span class="fst-italic fw-bold" style="color: #0c7b93">aaaaaa</span>
+        <span class="fst-italic fw-bold" style="color: #141e61">aaaaa.</span>
       </h1>
     </div>
   </body>
