--- a/birthday.html
+++ b/birthday.html
@@ -51,7 +51,7 @@
           >How are you</span
         >
         <span class="text-dark">feeling right</span>
-        <span class="fst-italic fw-bold" style="color: #e94560"> NOW!</span>
+        <span class="fw-bold" style="color: #ee9595"> NOW!</span>
       </h1>
     </div>
     <div
@@ -73,19 +73,19 @@
     </div>
     <div
       class="container-fluid second text-white py-5"
-      style="background-color: #f5abc9"
+      style="background-color: #351f39"
     >
       <h1 class="text">
         <span>I</span>
         <span class="fst-italic fw-bold" style="color: #c70a80">love you</span>
         <span class="fw-bold"> <3</span>
-        <span class="" style="color: #7f4a88">
+        <span class="" style="color: #a0c1b8">
           <br />
           meri</span
         >
-        <span class="fw-bold fst-italic" style="color: #3e206d">swetha </span>
+        <span class="fw-bold fst-italic" style="color: #7f4a88">swetha </span>
         <span class="fw-bold">hamesh</span>
-        <span class="fst-italic fw-bold" style="color: #141e61">aaaaa.</span>
+        <span class="fst-italic fw-bold" style="color: #726a95">aaaaa.</span>
       </h1>
     </div>
   </body>
