--- a/wish.html
+++ b/wish.html
@@ -27,224 +27,195 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.12.0/matter.js"></script>
   </head>
   <body class="text-start">
-    <h1 class="anarchy block prio1 fw-bold text">
-      happy birthday to youuu babayyy
-    </h1>
+    <div class="whole">
+      <h1 class="anarchy block prio1 fw-bold text">
+        happy birthday to youuu babayyy
+      </h1>
 
-    <h2 id="intro" class="anarchy block prio1 fw-bold">
-      At last, yeh dinn aahi gyaaa
-    </h2>
+      <h2 id="intro" class="anarchy block prio1 fw-bold">
+        may god bless you and follow you on every step you take!
+      </h2>
 
-    <div class="anarchy ball photo prio2">
-      <img
-        alt=""
-        src="https://cdn-icons-png.flaticon.com/512/929/929417.png"
-        title="Andy Barefoot"
-      />
+      <div class="anarchy ball photo prio3">
+        <iframe
+          src="https://giphy.com/embed/3oz8xRF0v9WMAUVLNK"
+          width="200"
+          height="auto"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="anarchy ball photo prio1">
+        <iframe
+          src="https://giphy.com/embed/Ge86XF8AVY1KE"
+          width="200"
+          height="auto"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="anarchy ball photo prio4">
+        <iframe
+          src="https://giphy.com/embed/olAik8MhYOB9K"
+          width="200"
+          height="auto"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="anarchy ball photo prio1">
+        <iframe
+          src="https://giphy.com/embed/6qWwuwwUKHojfKbCA0"
+          width="200"
+          height="auto"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+        ></iframe>
+        <p></p>
+      </div>
+
+      <div class="anarchy ball photo prio1">
+        <iframe
+          src="https://giphy.com/embed/l0ErWnkLjegNB5LlC"
+          width="200"
+          height="auto"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="anarchy ball photo prio1">
+        <iframe
+          src="https://giphy.com/embed/F3OHH5KL7po9qfHOJc"
+          width="200"
+          height="auto"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+        ></iframe>
+      </div>
+
+      <ul id="social">
+        <li class="anarchy ball prio1">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/3468/3468377.png"
+            alt=""
+            width="100"
+            height="100"
+          />
+        </li>
+        <li class="anarchy ball prio2">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/1864/1864472.png"
+            alt=""
+            width="100"
+            height="100"
+          />
+        </li>
+        <li class="anarchy ball prio2">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/826/826910.png"
+            alt=""
+            width="100"
+            height="100"
+          />
+        </li>
+
+        <li class="anarchy ball prio2">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/826/826912.png"
+            alt=""
+            width="100"
+            height="100"
+          />
+        </li>
+
+        <li class="anarchy ball prio1">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/6420/6420762.png"
+            alt=""
+            width="100"
+            height="100"
+          />
+        </li>
+
+        <li class="anarchy ball prio1">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/6807/6807894.png"
+            alt=""
+            width="100"
+            height="100"
+          />
+        </li>
+
+        <li class="anarchy ball prio2">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/3468/3468261.png"
+            alt=""
+            width="100"
+            height="100"
+          />
+        </li>
+      </ul>
+      <h2 id="intro" class="anarchy block prio1 fw-bold">
+        i am so in love with you kanmani you are so special to me!
+      </h2>
+      <ul class="collection" id="css">
+        <li>
+          <div class="anarchy block prio1">
+            <p>
+              A experimenting with displaying many rows of content in an
+              innovative way.
+            </p>
+            <p>
+              Uses CSS Grid with transforms and ::before and ::after selectors
+              to add a 3D effect to a list of images.
+            </p>
+          </div>
+        </li>
+        <li></li>
+        <li>
+          <div class="anarchy block prio3">
+            <p>
+              A experimenting with displaying many rows of content in an
+              innovative way.
+            </p>
+            <p>
+              Uses CSS Grid with transforms and ::before and ::after selectors
+              to add a 3D effect to a list of images.
+            </p>
+          </div>
+        </li>
+        <li>
+          <div class="anarchy block prio3">
+            <p>
+              A experimenting with displaying many rows of content in an
+              innovative way.
+            </p>
+            <p>
+              Uses CSS Grid with transforms and ::before and ::after selectors
+              to add a 3D effect to a list of images.
+            </p>
+          </div>
+        </li>
+        <li>
+          <div class="anarchy block prio4">
+            <p>
+              A experimenting with displaying many rows of content in an
+              innovative way.
+            </p>
+            <p>
+              Uses CSS Grid with transforms and ::before and ::after selectors
+              to add a 3D effect to a list of images.
+            </p>
+          </div>
+        </li>
+      </ul>
     </div>
-    <div class="anarchy ball photo prio3">
-      <img
-        alt=""
-        src="https://cdn-icons-png.flaticon.com/512/929/929417.png"
-        title="Andy Barefoot"
-      />
-    </div>
-    <div class="anarchy ball photo prio1">
-      <img
-        alt=""
-        src="https://cdn-icons-png.flaticon.com/512/929/929417.png"
-        title="Andy Barefoot"
-      />
-    </div>
-    <div class="anarchy ball photo prio4">
-      <img
-        alt=""
-        src="https://cdn-icons-png.flaticon.com/512/929/929417.png"
-        title="Andy Barefoot"
-      />
-    </div>
-    <div class="anarchy ball photo prio5">
-      <img
-        alt=""
-        src="https://cdn-icons-png.flaticon.com/512/929/929417.png"
-        title="Andy Barefoot"
-      />
-    </div>
-
-    <ul id="social">
-      <li class="anarchy ball prio1">
-        <img
-          src="https://cdn-icons-png.flaticon.com/512/1405/1405110.png"
-          alt=""
-          width="100"
-          height="100"
-        />
-      </li>
-      <li class="anarchy ball prio2">
-        <img
-          src="https://cdn-icons-png.flaticon.com/512/1405/1405110.png"
-          alt=""
-          width="100"
-          height="100"
-        />
-      </li>
-      <li class="anarchy ball prio4">
-        <img
-          src="https://cdn-icons-png.flaticon.com/512/1405/1405110.png"
-          alt=""
-          width="100"
-          height="100"
-        />
-      </li>
-
-      <li class="anarchy ball prio6">
-        <img
-          src="https://cdn-icons-png.flaticon.com/512/1405/1405110.png"
-          alt=""
-          width="100"
-          height="100"
-        />
-      </li>
-
-      <li class="anarchy ball prio5">
-        <img
-          src="https://cdn-icons-png.flaticon.com/512/1405/1405110.png"
-          alt=""
-          width="100"
-          height="100"
-        />
-      </li>
-
-      <li class="anarchy ball prio5">
-        <img
-          src="https://cdn-icons-png.flaticon.com/512/1405/1405110.png"
-          alt=""
-          width="100"
-          height="100"
-        />
-      </li>
-
-      <li class="anarchy ball prio3">
-        <img
-          src="https://cdn-icons-png.flaticon.com/512/1405/1405110.png"
-          alt=""
-          width="100"
-          height="100"
-        />
-      </li>
-
-      <li class="anarchy ball prio6">
-        <img
-          src="https://cdn-icons-png.flaticon.com/512/1405/1405110.png"
-          alt=""
-          width="100"
-          height="100"
-        />
-      </li>
-    </ul>
-    <ul class="collection" id="css">
-      <li>
-        <div class="anarchy block prio2">
-          <p>
-            A experimenting with displaying many rows of content in an
-            innovative way.
-          </p>
-          <p>
-            Uses CSS Grid with transforms and ::before and ::after selectors to
-            add a 3D effect to a list of images.
-          </p>
-        </div>
-      </li>
-      <li>
-        <div class="anarchy block prio2">
-          <p>
-            A experimenting with displaying many rows of content in an
-            innovative way.
-          </p>
-          <p>
-            Uses CSS Grid with transforms and ::before and ::after selectors to
-            add a 3D effect to a list of images.
-          </p>
-        </div>
-      </li>
-      <li>
-        <div class="anarchy block prio2">
-          <p>
-            A experimenting with displaying many rows of content in an
-            innovative way.
-          </p>
-          <p>
-            Uses CSS Grid with transforms and ::before and ::after selectors to
-            add a 3D effect to a list of images.
-          </p>
-        </div>
-      </li>
-      <li>
-        <div class="anarchy block prio2">
-          <p>
-            A experimenting with displaying many rows of content in an
-            innovative way.
-          </p>
-          <p>
-            Uses CSS Grid with transforms and ::before and ::after selectors to
-            add a 3D effect to a list of images.
-          </p>
-        </div>
-      </li>
-      <li>
-        <div class="anarchy block prio2">
-          <p>
-            A experimenting with displaying many rows of content in an
-            innovative way.
-          </p>
-          <p>
-            Uses CSS Grid with transforms and ::before and ::after selectors to
-            add a 3D effect to a list of images.
-          </p>
-        </div>
-      </li>
-      <li>
-        <div class="anarchy block prio2">
-          <p>
-            A experimenting with displaying many rows of content in an
-            innovative way.
-          </p>
-          <p>
-            Uses CSS Grid with transforms and ::before and ::after selectors to
-            add a 3D effect to a list of images.
-          </p>
-        </div>
-      </li>
-    </ul>
-
-    <ul class="collection" id="datavis">
-      <li>
-        <h3 class="anarchy block" class="anarchy block prio4">
-          I love you babay hameshaaaaa
-        </h3>
-      </li>
-      <li>
-        <h3 class="anarchy block" class="anarchy block prio4">
-          I love you babay hameshaaaaa
-        </h3>
-      </li>
-      <li>
-        <h3 class="anarchy block" class="anarchy block prio4">
-          I love you babay hameshaaaaa
-        </h3>
-      </li>
-      <li>
-        <h3 class="anarchy block" class="anarchy block prio4">
-          I love you babay hameshaaaaa
-        </h3>
-      </li>
-      <li>
-        <h3 class="anarchy block" class="anarchy block prio4">
-          I love you babay hameshaaaaa
-        </h3>
-      </li>
-    </ul>
-
     <script src="happy.js"></script>
   </body>
 </html>
