--- a/wish.html
+++ b/wish.html
@@ -36,7 +36,7 @@
         may god bless you and follow you on every step you take!
       </h2>
 
-      <div class="anarchy ball photo prio3">
+      <div class="anarchy ball photo prio2">
         <iframe
           src="https://giphy.com/embed/3oz8xRF0v9WMAUVLNK"
           width="200"
@@ -46,7 +46,7 @@
           allowfullscreen
         ></iframe>
       </div>
-      <div class="anarchy ball photo prio1">
+      <div class="anarchy ball photo prio3">
         <iframe
           src="https://giphy.com/embed/Ge86XF8AVY1KE"
           width="200"
@@ -56,7 +56,7 @@
           allowfullscreen
         ></iframe>
       </div>
-      <div class="anarchy ball photo prio4">
+      <div class="anarchy ball photo prio2">
         <iframe
           src="https://giphy.com/embed/olAik8MhYOB9K"
           width="200"
@@ -66,7 +66,7 @@
           allowfullscreen
         ></iframe>
       </div>
-      <div class="anarchy ball photo prio1">
+      <div class="anarchy ball photo prio3">
         <iframe
           src="https://giphy.com/embed/6qWwuwwUKHojfKbCA0"
           width="200"
@@ -78,7 +78,7 @@
         <p></p>
       </div>
 
-      <div class="anarchy ball photo prio1">
+      <div class="anarchy ball photo prio2">
         <iframe
           src="https://giphy.com/embed/l0ErWnkLjegNB5LlC"
           width="200"
@@ -88,7 +88,7 @@
           allowfullscreen
         ></iframe>
       </div>
-      <div class="anarchy ball photo prio1">
+      <div class="anarchy ball photo prio3">
         <iframe
           src="https://giphy.com/embed/F3OHH5KL7po9qfHOJc"
           width="200"
@@ -100,7 +100,7 @@
       </div>
 
       <ul id="social">
-        <li class="anarchy ball prio1">
+        <li class="anarchy ball prio2">
           <img
             src="https://cdn-icons-png.flaticon.com/512/3468/3468377.png"
             alt=""
@@ -108,17 +108,25 @@
             height="100"
           />
         </li>
-        <li class="anarchy ball prio2">
+        <li class="anarchy ball prio1">
           <img
-            src="https://cdn-icons-png.flaticon.com/512/1864/1864472.png"
+            src="https://cdn-icons-png.flaticon.com/512/7835/7835424.png"
             alt=""
             width="100"
             height="100"
           />
         </li>
-        <li class="anarchy ball prio2">
+        <li class="anarchy ball prio1">
           <img
-            src="https://cdn-icons-png.flaticon.com/512/826/826910.png"
+            src="https://cdn-icons-png.flaticon.com/512/2447/2447972.png"
+            alt=""
+            width="100"
+            height="100"
+          />
+        </li>
+        <li class="anarchy ball prio3">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/3656/3656946.png"
             alt=""
             width="100"
             height="100"
@@ -143,7 +151,7 @@
           />
         </li>
 
-        <li class="anarchy ball prio1">
+        <li class="anarchy ball prio3">
           <img
             src="https://cdn-icons-png.flaticon.com/512/6807/6807894.png"
             alt=""
@@ -179,7 +187,7 @@
         </li>
         <li></li>
         <li>
-          <div class="anarchy block prio3">
+          <div class="anarchy block prio2">
             <p>
               A experimenting with displaying many rows of content in an
               innovative way.
