--- a/wish.html
+++ b/wish.html
@@ -172,7 +172,7 @@
       <h2 id="intro" class="anarchy block prio1 fw-bold">
         i am so in love with you kanmani you are so special to me!
       </h2>
-      <ul class="collection" id="css">
+      <ul class="collection fw-bold" id="css">
         <li>
           <div class="anarchy block prio1">
             <p>
