--- a/wish.html
+++ b/wish.html
@@ -223,6 +223,17 @@
           </div>
         </li>
       </ul>
+
+      <label class="switch anarchy block prio5"
+        ><input type="checkbox" id="switch" />
+        <div></div>
+        <p
+          style="font-size: 1rem"
+          class="fw-bold bg-warning rounded-3 mt-2 text-center fst-italic"
+        >
+          activate me when you are ready for the next page!
+        </p>
+      </label>
     </div>
     <script src="happy.js"></script>
   </body>
