--- a/index-1.html
+++ b/index-1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy Birthday</title>
-    <link rel="stylesheet" href="styles.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,6 +27,26 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/matter-js@0.17.1/build/matter.min.js"></script>
   </head>
+  <style>
+    body {
+      font-family: "Poppins", sans-serif !important;
+      background: #2c3639 !important;
+    }
+
+    h1.text {
+      font-size: 500%;
+    }
+    * {
+      margin: 0;
+    }
+    figure {
+      height: 650px;
+      width: 100%;
+      max-width: 600px;
+      margin: 0 auto;
+      z-index: 0;
+    }
+  </style>
   <body>
     <figure class="m-0"></figure>
     <div
@@ -94,5 +114,5 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
   ></script>
-  <script src="bday.js"></script>
+  <script src="js/index-1.js"></script>
 </html>
