--- a/index-2.html
+++ b/index-2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy Birthday</title>
-    <link rel="stylesheet" href="wishes.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,6 +26,130 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.12.0/matter.js"></script>
   </head>
+  <style>
+    html {
+      font-size: 0.8em;
+      background-color: #ffeeee;
+      text-align: center;
+    }
+    body {
+      font-family: "Poppins", sans-serif !important;
+      background-color: #576f72 !important;
+    }
+
+    .text {
+      font-size: 500%;
+    }
+    canvas {
+      display: none;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 100px;
+      height: 75px;
+    }
+
+    .anarchy {
+      position: absolute;
+      visibility: hidden;
+    }
+
+    .photo img {
+      width: 120px;
+      height: 120px;
+    }
+    #intro {
+      background-color: #f9ceee;
+      font-size: 18px;
+      width: 180px;
+      padding: 10px;
+      font-size: 22px;
+      text-align: center;
+    }
+    h1 {
+      width: 320px;
+      height: 350px;
+      padding-top: 10px;
+      font-size: 70px;
+      background-color: #f1d4d4;
+      border-radius: 1em;
+      color: #cc0e74;
+    }
+
+    h2 {
+      width: 150px;
+      height: 110px;
+      padding-top: 10px;
+      font-size: 50px;
+      background-color: #f1d4d4;
+      border-radius: 2em;
+      color: #cc0e74;
+    }
+    h3 {
+      width: 200px;
+      padding-top: 10px;
+      font-size: 40px;
+      background-color: #ff6363;
+      border-radius: 1em;
+    }
+    .smaller {
+      width: 240px;
+    }
+
+    li > div {
+      background-color: #fdbaf8;
+      width: 180px;
+      padding: 10px;
+      font-size: 14px;
+      border-radius: 1em;
+      border: #000 solid;
+    }
+    p {
+      margin-bottom: 10px;
+    }
+    li {
+      text-decoration: none;
+      display: grid;
+    }
+    .whole {
+      width: 100%;
+      height: 100%;
+    }
+    .switch input {
+      position: absolute;
+      opacity: 0;
+    }
+
+    /**
+ * 1. Adjust this to size
+ */
+
+    .switch {
+      display: inline-block;
+      font-size: 20px; /* 1 */
+      height: 2em;
+      width: 4em;
+      background: #cc0e74;
+      border-radius: 1em;
+    }
+
+    .switch div {
+      height: 2em;
+      width: 2em;
+      border-radius: 1em;
+      background: #fff;
+      box-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.3);
+      -webkit-transition: all 300ms;
+      -moz-transition: all 300ms;
+      transition: all 300ms;
+    }
+
+    .switch input:checked + div {
+      -webkit-transform: translate3d(100%, 0, 0);
+      -moz-transform: translate3d(100%, 0, 0);
+      transform: translate3d(100%, 0, 0);
+    }
+  </style>
   <body class="text-start">
     <div class="whole">
       <h1 class="anarchy block prio1 fw-bold text">
@@ -235,6 +359,6 @@
         </p>
       </label>
     </div>
-    <script src="happy.js"></script>
+    <script src="js/index-2.js"></script>
   </body>
 </html>
