--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Happy Birthday</title>
-
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,13 +17,11 @@
       sizes="100%"
       href="https://cdn-icons-png.flaticon.com/512/837/837891.png"
     />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  </head>
-  <style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script></head
+  ><style>
     html {
       background: #4c3a51;
     }
-
     .container {
       position: absolute;
       top: 0;
@@ -35,39 +32,28 @@
       margin: auto;
       text-align: center;
     }
-
-    /** Switch
- -------------------------------------*/
-
     .switch input {
       position: absolute;
       opacity: 0;
     }
-
-    /**
- * 1. Adjust this to size
- */
-
     .switch {
       display: inline-block;
-      font-size: 20px; /* 1 */
+      font-size: 20px;
       height: 2em;
       width: 4em;
       background: #b25068;
       border-radius: 1em;
     }
-
     .switch div {
       height: 2em;
       width: 2em;
       border-radius: 1em;
       background: #fff;
       box-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.3);
-      -webkit-transition: all 300ms;
-      -moz-transition: all 300ms;
-      transition: all 300ms;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      transition: all 0.3s;
     }
-
     .switch input:checked + div {
       -webkit-transform: translate3d(100%, 0, 0);
       -moz-transform: translate3d(100%, 0, 0);
@@ -78,14 +64,14 @@
     <div class="container">
       <label class="switch"
         ><input type="checkbox" id="switch" />
-        <div></div>
-      </label>
+        <div></div
+      ></label>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/index.js"></script>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"
-  ></script>
-  <script src="js/index.js"></script>
 </html>
