--- a/index-3.html
+++ b/index-3.html
@@ -6,5 +6,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy Birthday</title>
   </head>
-  <body></body>
+  <style>
+    @import url("https://fonts.googleapis.com/css?family=Quicksand:300,500");
+
+    * {
+      margin: 0;
+      overflow: hidden;
+      font-family: "Quicksand", sans-serif;
+    }
+
+    a {
+      color: black;
+    }
+
+    h1 {
+      font-weight: 500;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      text-align: center;
+      font-size: 10vmin;
+      transform: translateX(-50.3%) translateY(-52%);
+      cursor: pointer;
+    }
+
+    #dot {
+      color: #ea1066;
+      font-family: times-new-roman, serif;
+      font-size: 10vmin;
+    }
+
+    #js {
+      color: #aaa;
+      font-weight: 300;
+    }
+
+    p {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(calc(-50% + 29.5vmin), calc(-50% - 3.8vmin));
+      font-size: 3vmin;
+      font-weight: 300;
+      width: 12vmin;
+      text-align: center;
+      color: #777;
+      cursor: pointer;
+    }
+
+    h2 {
+      top: 75%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 10vmin;
+      font-weight: 300;
+      box-sizing: border-box;
+      border: 0.4vmin dashed black;
+      border-radius: 200px;
+      background-color: #eee;
+      padding: 0 6vmin;
+      transition: all 0.3s ease;
+      cursor: pointer;
+    }
+
+    sup {
+      font-size: 6vmin;
+    }
+
+    h2:hover {
+      background-color: black;
+      border: 0.4vmin dashed white;
+      color: white;
+    }
+  </style>
+  <body>
+    <a href="#"
+      ><h1>MATTER<span id="dot">.</span><span id="js">JS</span></h1></a
+    >
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.12.0/matter.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/index-3.js"></script>
+  </body>
 </html>
