--- a/index-3.html
+++ b/index-3.html
@@ -11,11 +11,18 @@
       sizes="100%"
       href="https://cdn-icons-png.flaticon.com/512/7434/7434648.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.12.0/matter.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
 
   <style>
-    @import url("https://fonts.googleapis.com/css?family=Quicksand:300,500");
-
     * {
       margin: 0;
       overflow: hidden;
@@ -25,7 +32,7 @@
       background-color: #ffeeee;
     }
     h1 {
-      font-weight: 500;
+      font-weight: 900;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -37,10 +44,8 @@
     }
   </style>
   <body>
-    <a href="#"><h1>MATTER</h1></a>
+    <a href="#"><h1>i love you meri swetha hameshaa</h1></a>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.12.0/matter.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/index-3.js"></script>
   </body>
 </html>
