--- a/index-3.html
+++ b/index-3.html
@@ -44,7 +44,7 @@
     }
   </style>
   <body>
-    <a href="#"><h1>i love you meri swetha hameshaa</h1></a>
+    <a href="#" class="audio"><h1>i love you meri swetha hameshaa</h1></a>
 
     <script src="js/index-3.js"></script>
   </body>
