--- a/index-3.html
+++ b/index-3.html
@@ -51,7 +51,7 @@
       font-size: 20px;
       height: 1em;
       width: 2em;
-      background: #8443c1;
+      background: #f2789f;
       border-radius: 1em;
     }
     .switch div {
