--- a/index-2.html
+++ b/index-2.html
@@ -125,7 +125,7 @@
   </style>
   <body class="text-start">
     <h1 class="anarchy block prio1 fw-bold text">
-      happy <span><a href="#" class="audio">birthday</a></span> to youuu babayyy
+      happy <span><a class="audio">birthday</a></span> to youuu babayyy
     </h1>
     <h2 id="intro" class="anarchy block prio1 fw-bold container">
       may god bless you and follow you on every step you take!
