--- a/index-1.html
+++ b/index-1.html
@@ -110,11 +110,10 @@
       <h1 class="text">
         <span class="fw-bold">Its your </span>
         <span class="fw-bold" style="color: #e6739f">birthday</span> mam.
-        <span class="fst-italic fw-bold" style="color: #cc0e74"
-          >How are you</span
-        >
-        <span class="text-dark">feeling right</span>
-        <span class="fw-bold" style="color: #ee9595"> NOW!</span>
+        <span class="fw-bold" style="color: #cc0e74"> How are </span>
+        <span class="fw-bold text-dark"> you</span>
+        <span class="fw-bold" style="color: #e6739f">feeling right</span>
+        <span class="fw-bold"> NOW!</span>
       </h1>
     </div>
     <div
@@ -122,15 +121,15 @@
       style="background-color: #1b2430"
     >
       <h1 class="text">
-        <span>I</span>
+        <span class="fw-bold">I</span>
         <span class="fst-italic fw-bold">hope</span>
         <span>you are</span>
         <span class="fw-bold song1">
           <a class="audio-1"> feeling fine.</a></span
         >
-        <span class="fw-bold fst-italic" style="color: #c70a80">I </span>
-        <span class="fw-bold" style="color: #c70a80">think</span>
-        <span class="fst-italic" style="color: #c70a80"> we are</span>
+        <span class="fw-bold" style="color: #c70a80">I </span>
+        <span class="fw-bold fst-italic" style="color: #c70a80">think</span>
+        <span class="" style="color: #c70a80"> we are</span>
         <span class="fw-bold song2">
           <a class="audio-2"> better together.</a></span
         >
