--- a/index-1.html
+++ b/index-1.html
@@ -77,10 +77,12 @@
     .audio-2 {
       text-decoration: none;
     }
-    .audio-1 {
+    .audio-1,
+    .audio-1:hover {
       color: #51557e;
     }
-    .audio-2 {
+    .audio-2,
+    .audio-2:hover {
       color: #816797;
     }
   </style>
