--- a/index-2.html
+++ b/index-2.html
@@ -332,6 +332,11 @@
         audio.play();
         $(".audio").css("color", "#cc0e74");
       });
+      $("#switch").click(function () {
+        if (this.checked) {
+          window.location.href = "index-3.html";
+        }
+      });
     </script>
 
     <script src="js/index-2.js"></script>
