--- a/index-3.html
+++ b/index-3.html
@@ -71,7 +71,7 @@
     }
   </style>
   <body>
-    <a href="#" class="audio"
+    <a href="#" class="audio" style="color: #551a8b"
       ><h1>
         i love you meri swetha hameshaa
         <div class="container">
